# fridgeprotect

./: Cargo.toml
.cargo/: config.toml
src/: angle.rs  indication.rs  main.rs
