[package]
name = "fridgeprotect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"]}
cortex-m-rt = "*"
panic-halt = "0.2.0"
panic-rtt-target = { version = "*", features = ["cortex-m"]}
microbit-v2 = "0.13.0"
lsm303agr = "0.2.0"
rtt-target = "0.4.0"
micromath = "*"